@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+          - Fixed cache invalidation for multifile reads
+
 0.68.1    2016-02-01 14:31:42
           - Fixed bug calling push_layer on mswin32
 
